# BitTemple

./: .gitignore  API_REFERENCE.md  CATALOG_SERVICE_FEATURES.md  CHANGES.md  FRONTEND_INTEGRATION.md  INTEGRATION_PLAN.md  README.md  REPOSITORY_SUMMARY.md  TYPE_SPECIFIC_ROUTES.md  config.example.yaml  pyproject.toml  pytest.ini  requirements.txt  tmp.json  tmp_download.py
api/: registry.py
api/catalog/: registry.py
api/internetarchive/: __init__.py  client.py
api/metadata/: registry.py
api/tmdb/: client.py
app/: logging.py  main.py  settings.py
bitharbor/: main.py  settings.py
bitharbor/ann/: base.py  hnsw.py  service.py
bitharbor/db/: init.py  session.py
bitharbor/models/: media.py
bitharbor/routers/: auth.py  ingest.py  media.py  participants.py  search.py
bitharbor/schemas/: __init__.py  auth.py  media.py  participant.py  search.py
bitharbor/utils/: hashing.py
db/: base.py  init.py  session.py
db/models/: __init__.py  auth.py  media.py  music.py
docs/testing/: embedding_ann_playbook.md
domain/: __init__.py  search.py
domain/auth/: auth.py  participant.py
domain/media/: __init__.py  base.py  movies.py  music.py  personal.py  podcast.py  tv.py
domain/schemas/: __init__.py  catalog.py  enrichment.py  ingest.py  media.py
examples/: catalog_example.py
features/auth/: router.py  (+3 more)
scripts/: bitharbor.service  inspect_internetarchive_metadata.py  test_jamendo_ingest.py
tests/: conftest.py  test_catalog_service.py  test_enrichment_typing.py  test_health.py  test_tv_enrichment_integration.py  test_tv_enrichment_typing.py
utils/: hashing.py
(+103 files in other folders)
